--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="../">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="?about">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="?contact">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="?page=home">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="?page=about">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="?page=contact">Contact</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="?blog">Blog Home</a></li>
-                                    <li><a class="dropdown-item" href="?blogpost">Blog Post</a></li>
+                                    <li><a class="dropdown-item" href="?page=blog">Blog Home</a></li>
+                                    <li><a class="dropdown-item" href="?page=blogpost">Blog Post</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item" href="?portfolio">Portfolio Overview</a></li>
-                                    <li><a class="dropdown-item" href="?portfolioitem">Portfolio Item</a></li>
+                                    <li><a class="dropdown-item" href="?page=portfolio">Portfolio Overview</a></li>
+                                    <li><a class="dropdown-item" href="?page=portfolioitem">Portfolio Item</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -86,8 +86,13 @@
 </main>
 
 <script>
+    
     const xhr = new XMLHttpRequest();
     const container = document.getElementById('container');
+
+    let currUrl = document.location.search.substring(1);
+    let params = new URLSearchParams(currUrl);
+    let page = params.get('page');
 
     xhr.onload = function() {
         if(this.status === 200) {
@@ -98,8 +103,38 @@
         }
     };
 
-    xhr.open('get', 'pages/homepage.html');
+    if(page == 'about')
+    {
+        xhr.open('get', 'pages/about.html');
+    }
+    else if(page == 'contact')
+    {
+        xhr.open('get', 'pages/contact.html');
+    }
+    else if(page == 'blog')
+    {
+        xhr.open('get', 'pages/blog-home.html');
+    }
+    else if(page == 'blogpost')
+    {
+        xhr.open('get', 'pages/blog-post.html');
+    }
+    else if(page == 'portfolio')
+    {
+        xhr.open('get', 'pages/portfolio-overview.html');
+    }
+    else if(page == 'portfolioitem')
+    {
+        xhr.open('get', 'pages/portfolio-item.html');
+    }
+    else if(page == 'home')
+    {
+        xhr.open('get', 'pages/homepage.html');
+    }
+
     xhr.send();
+
+
 </script>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto">
