Small fix in XHR

--- a/index.html
+++ b/index.html
@@ -127,12 +127,10 @@
     {
         xhr.open('get', 'pages/portfolio-item.html');
     }
-    else if(page == 'home')
+    else
     {
         xhr.open('get', 'pages/homepage.html');
     }
-
-    xhr.open('get', 'pages/homepage.html');
     xhr.send();
 
 
