--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -7,8 +7,8 @@
                     <h1 class="display-5 fw-bolder text-white mb-2">YOUR LEADING PRINTING SERVICES FROM THE NORTH</h1>
                     <p class="lead fw-normal text-white-50 mb-4">Clever tagline here for Leader Printline</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                        <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
+                        <a class="btn btn-danger btn-lg px-4 me-sm-3" href="#features">Get Started</a>
+                        <a class="btn btn-outline-light btn-lg px-4" href="/?page=about">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -24,22 +24,22 @@
             <div class="col-lg-8">
                 <div class="row gx-5 row-cols-1 row-cols-md-2">
                     <div class="col mb-5 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-brush"></i></div>
+                        <div class="feature bg-danger bg-gradient text-white rounded-3 mb-3"><i class="bi bi-brush"></i></div>
                         <h2 class="h5">Design</h2>
                         <p class="mb-0">Got an idea for a new trendy design? We can make it!</p>
                     </div>
                     <div class="col mb-5 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-hammer"></i></div>
+                        <div class="feature bg-danger bg-gradient text-white rounded-3 mb-3"><i class="bi bi-hammer"></i></div>
                         <h2 class="h5">Customize</h2>
                         <p class="mb-0">We are able to provide your request with your specific design needs!</p>
                     </div>
                     <div class="col mb-5 mb-md-0 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-printer"></i></div>
+                        <div class="feature bg-danger bg-gradient text-white rounded-3 mb-3"><i class="bi bi-printer"></i></div>
                         <h2 class="h5">Print</h2>
                         <p class="mb-0">We can print your designs on anything!</p>
                     </div>
                     <div class="col h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-heart-fill"></i></div>
+                        <div class="feature bg-danger bg-gradient text-white rounded-3 mb-3"><i class="bi bi-heart-fill"></i></div>
                         <h2 class="h5">Made with love</h2>
                         <p class="mb-0">It is because of you that we are able to do what we love.</p>
                     </div>
@@ -54,13 +54,16 @@
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-10 col-xl-7">
                 <div class="text-center">
-                    <div class="fs-4 mb-4 fst-italic">"Working with Start Bootstrap templates has saved me tons of development time when building new projects! Starting with a Bootstrap template just makes things easier!"</div>
+                    <div class="fs-4 mb-4 fst-italic">
+                        "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae earum quia tenetur aliquam. Maxime error, id nobis ipsum consequuntur corporis dicta qui, sunt magnam quasi ad eius nam neque temporibus."
+                        (nu anat kayat mo nga ibaga ditoy mg karl 😁)
+                    </div>
                     <div class="d-flex align-items-center justify-content-center">
-                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                        <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." /> -->
                         <div class="fw-bold">
-                            Tom Ato
-                            <span class="fw-bold text-primary mx-1">/</span>
-                            CEO, Pomodoro
+                            Karl Corpuz
+                            <span class="fw-bold text-danger mx-1">/</span>
+                            CEO, Leader Printline
                         </div>
                     </div>
                 </div>
@@ -84,7 +87,7 @@
                 <div class="card h-100 shadow border-0">
                     <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
                     <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
+                        <div class="badge bg-danger bg-gradient rounded-pill mb-2">News</div>
                         <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Blog post title</h5></a>
                         <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
@@ -93,7 +96,7 @@
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                 <div class="small">
-                                    <div class="fw-bold">Kelly Rowan</div>
+                                    <div class="fw-bold">Karl</div>
                                     <div class="text-muted">March 12, 2021 &middot; 6 min read</div>
                                 </div>
                             </div>
@@ -105,7 +108,7 @@
                 <div class="card h-100 shadow border-0">
                     <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
                     <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
+                        <div class="badge bg-danger bg-gradient rounded-pill mb-2">Media</div>
                         <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Another blog post title</h5></a>
                         <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
@@ -114,7 +117,7 @@
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                 <div class="small">
-                                    <div class="fw-bold">Josiah Barclay</div>
+                                    <div class="fw-bold">Kash</div>
                                     <div class="text-muted">March 23, 2021 &middot; 4 min read</div>
                                 </div>
                             </div>
@@ -126,7 +129,7 @@
                 <div class="card h-100 shadow border-0">
                     <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
                     <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
+                        <div class="badge bg-danger bg-gradient rounded-pill mb-2">News</div>
                         <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">The last blog post title is a little bit longer than the others</h5></a>
                         <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
@@ -135,7 +138,7 @@
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                 <div class="small">
-                                    <div class="fw-bold">Evelyn Martinez</div>
+                                    <div class="fw-bold">Apple</div>
                                     <div class="text-muted">April 2, 2021 &middot; 10 min read</div>
                                 </div>
                             </div>
@@ -144,8 +147,14 @@
                 </div>
             </div>
         </div>
+        <div class="text-end mb-5 mb-xl-0">
+            <a class="text-decoration-none" href="#!">
+                View all blog posts
+                <i class="bi bi-arrow-right"></i>
+            </a>
+        </div>
         <!-- Call to action-->
-        <aside class="bg-primary bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+        <aside class="bg-danger bg-gradient rounded-3 p-4 p-sm-5 mt-5">
             <div class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start">
                 <div class="mb-4 mb-xl-0">
                     <div class="fs-3 fw-bold text-white">New products, delivered to you.</div>
