--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- <?php include("includes/header.php"); ?>
-
+// USE THIS BELOW CODE ON DEPLOYMENT, FOR NOW LEAVE IT AS NATIVE HTML FOR DEMONSTRATION PURPOSES!!
 <?php 
     if($_SERVER['REQUEST_URI'] == "/" || $_SERVER['REQUEST_URI'] == "/index.php")
     {
@@ -61,7 +61,9 @@
                             <li class="nav-item"><a class="nav-link" href="?page=home">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="?page=about">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="?page=contact">Contact</a></li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item"><a class="nav-link" href="?page=blog">Blog</a></li>
+                            <li class="nav-item"><a class="nav-link" href="?page=portfolio">Portfolio</a></li>
+                            <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
                                     <li><a class="dropdown-item" href="?page=blog">Blog Home</a></li>
@@ -74,7 +76,7 @@
                                     <li><a class="dropdown-item" href="?page=portfolio">Portfolio Overview</a></li>
                                     <li><a class="dropdown-item" href="?page=portfolioitem">Portfolio Item</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -139,7 +141,7 @@
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2021</div></div>
+                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Leader Printline 2021</div></div>
                     <div class="col-auto">
                         <a class="link-light small" href="#!">Privacy</a>
                         <span class="text-white mx-1">&middot;</span>
