--- a/pages/blog-home.html
+++ b/pages/blog-home.html
@@ -7,8 +7,8 @@
                             <div class="row gx-0">
                                 <div class="col-lg-6 col-xl-5 py-lg-5">
                                     <div class="p-4 p-md-5">
-                                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                        <div class="h2 fw-bolder">Article heading goes here</div>
+                                        <div class="badge bg-danger bg-gradient rounded-pill mb-2">News</div>
+                                        <div class="h2 fw-bolder">Article heading goes here (always latest)</div>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique delectus ab doloremque, qui doloribus ea officiis...</p>
                                         <a class="stretched-link text-decoration-none" href="#!">
                                             Read more
@@ -25,17 +25,17 @@
             <section class="py-5 bg-light">
                 <div class="container px-5">
                     <div class="row gx-5">
-                        <div class="col-xl-8">
+                        <div class="col-xl-12">
                             <h2 class="fw-bolder fs-5 mb-4">News</h2>
                             <!-- News item-->
                             <div class="mb-4">
                                 <div class="small text-muted">May 12, 2021</div>
-                                <a class="link-dark" href="#!"><h3>Start Bootstrap releases Bootstrap 5 updates for templates and themes</h3></a>
+                                <a class="link-dark" href="#!"><h3>Karlitos Bar is now on the radar!</h3></a>
                             </div>
                             <!-- News item-->
                             <div class="mb-5">
                                 <div class="small text-muted">May 5, 2021</div>
-                                <a class="link-dark" href="#!"><h3>Bootstrap 5 has officially landed</h3></a>
+                                <a class="link-dark" href="#!"><h3>This is what a short title looks like</h3></a>
                             </div>
                             <!-- News item-->
                             <div class="mb-5">
@@ -49,7 +49,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-xl-4">
+                        <!-- <div class="col-xl-4">
                             <div class="card border-0 h-100">
                                 <div class="card-body p-4">
                                     <div class="d-flex h-100 align-items-center justify-content-center">
@@ -69,7 +69,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -82,7 +82,7 @@
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
+                                    <div class="badge bg-danger bg-gradient rounded-pill mb-2">News</div>
                                     <a class="text-decoration-none link-dark stretched-link" href="#!"><div class="h5 card-title mb-3">Blog post title</div></a>
                                     <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
@@ -91,7 +91,7 @@
                                         <div class="d-flex align-items-center">
                                             <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
-                                                <div class="fw-bold">Kelly Rowan</div>
+                                                <div class="fw-bold">Karl</div>
                                                 <div class="text-muted">March 12, 2021 &middot; 6 min read</div>
                                             </div>
                                         </div>
@@ -103,7 +103,7 @@
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
+                                    <div class="badge bg-danger bg-gradient rounded-pill mb-2">Media</div>
                                     <a class="text-decoration-none link-dark stretched-link" href="#!"><div class="h5 card-title mb-3">Another blog post title</div></a>
                                     <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
@@ -112,7 +112,7 @@
                                         <div class="d-flex align-items-center">
                                             <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
-                                                <div class="fw-bold">Josiah Barclay</div>
+                                                <div class="fw-bold">Kash</div>
                                                 <div class="text-muted">March 23, 2021 &middot; 4 min read</div>
                                             </div>
                                         </div>
@@ -124,7 +124,7 @@
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
+                                    <div class="badge bg-danger bg-gradient rounded-pill mb-2">News</div>
                                     <a class="text-decoration-none link-dark stretched-link" href="#!"><div class="h5 card-title mb-3">The last blog post title is a little bit longer than the others</div></a>
                                     <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
@@ -133,7 +133,7 @@
                                         <div class="d-flex align-items-center">
                                             <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                             <div class="small">
-                                                <div class="fw-bold">Evelyn Martinez</div>
+                                                <div class="fw-bold">Apple</div>
                                                 <div class="text-muted">April 2, 2021 &middot; 10 min read</div>
                                             </div>
                                         </div>
