--- a/pages/portfolio-overview.html
+++ b/pages/portfolio-overview.html
@@ -9,25 +9,25 @@
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
                                 <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="?page=portfolioitem">Project name</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
                                 <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="?page=portfolioitem">Project name</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5 mb-lg-0">
                                 <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="?page=portfolioitem">Project name</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative">
                                 <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="?page=portfolioitem">Project name</a>
                             </div>
                         </div>
                     </div>
@@ -36,6 +36,6 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                    <a class="btn btn-lg btn-primary" href="#!">Contact us</a>
+                    <a class="btn btn-lg btn-danger" href="#!">Contact us</a>
                 </div>
             </section>
