updated color on about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
                             <div class="text-center my-5">
                                 <h1 class="fw-bolder mb-3">Our mission is to make something easier for everyone.</h1>
                                 <p class="lead fw-normal text-muted mb-4">Leader Printline was founded on the idea that quality, and functional consumer goods should be available to everyone. Let us support you make what you want into a reality. And support us by purchasing one of our premium products or services.</p>
-                                <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a>
+                                <a class="btn btn-danger btn-lg" href="#scroll-target">Read our story</a>
                             </div>
                         </div>
                     </div>
